<resources>
    <string name="app_name">phOWNED</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_new_session">NewSession</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- PROFILE PAGE STRINGS -->
    <string name="group_title"><b>GROUPS</b></string>
    <string name="fails_title"><b>OWNS:</b></string>
    <string name="nickname_title">NICKNAME</string>
    <string name="rank_title">RANK</string>
    <string name="score_title">SCORE</string>
    <string name="time_on_phone_title">TIME ON PHONE</string>
    <string name="games_played_title">GAMES PLAYED</string>
    <string name="times_failed_title">TIMES OWNED</string>

    <!-- FOR HOME SCREEN -->
    <string name="new_group_button"><b>Create New GROUP</b></string>

    <!--GROUP SCREEN-->

    <string name="group_members_header">Group Members</string>
    <string name="new_game_button">New Game</string>
    <string name="title_activity_end_game_stats">EndGameStats</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="splash_title">Welcome Back!</string>
    <string name="splash_dynamic_message">Welcome Back, \n %s!</string>

    <!-- NEW SESSION SCREEN -->
    <string name="chill_name">CHILL</string>
    <string name="thrill_name">THRILL</string>
    <string name="kill_name">KILL</string>
    <string name="chill_short_desc">Easy Meet-up</string>
    <string name="thrill_short_desc">Stay Alert</string>
    <string name="kill_short_desc">Full Commitment!</string>
    <string name="chill_desc">You can check your phone if you want, but don\'t do it too much</string>
    <string name="thrill_desc">If you don\'t like surprises, don\'t pick this mode.</string>
    <string name="kill_desc">If you use the phone during this meeting, you\'ll regret it</string>
    <string name="new_session_button">START GAME</string>

    <!-- EDIT PROFILE -->
    <string name="save_changes">Save Changes</string>
    <string name="nickname_hint">Nickname cannot be blank</string>
    <string name="edit_nickname">Edit nickname:</string>

    <string name="no_members">NO MEMBERS ADDED YET</string>

    <string name="exit_group">LEAVE GROUP</string>

    <string name="no_groups">YOU HAVEN\'T CREATED ANY GROUPS YET! \n\n\n\n CREATE A NEW GROUP USING THE BUTTON BELOW</string>

    <string name="owns_link"><u>MY OWNS</u></string>

</resources>
