<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dtBlack"
    tools:context=".NewSession">

    <!--Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="New Session Name"
            android:textColor="@android:color/white"
            android:lines="1"/>

    </Toolbar-->

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!--TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"/-->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/dtBlack"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="75dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                app:hintEnabled="true"
                android:background="@drawable/profile_border"
                android:padding="15sp"
                android:layout_marginHorizontal="16sp"
                >


                <EditText
                    android:id="@+id/gameName"
                    android:layout_width="@android:dimen/thumbnail_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Game Name"
                    android:textSize="15sp"
                    android:inputType="text"
                    android:text="Fish &amp; Chips"
                    tools:textColor="@color/colorPrimary"
                    />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="GAME TYPE"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp"
                >

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/chill"
                    android:layout_width="105sp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/profile_border"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:onClick="onTypeSelected">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="75dp"
                        app:srcCompat="@drawable/ic_local_cafe_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chill_name"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5sp"
                        android:paddingTop="10sp"
                        android:paddingBottom="10sp"
                        android:text="@string/chill_short_desc"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/thrill"
                        android:layout_width="105sp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/profile_border"
                        android:clickable="true"
                        android:onClick="onTypeSelected">

                        <ImageView
                            android:layout_width="45sp"
                            android:layout_height="75sp"
                            app:srcCompat="@drawable/ic_local_bar_black_24dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thrill_name"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10sp"
                            android:text="@string/thrill_short_desc"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:paddingBottom="10sp"
                            android:paddingHorizontal="5sp"/>

                    </LinearLayout>

                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/kill"
                        android:layout_width="105sp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/profile_border"
                        android:clickable="true"
                        android:onClick="onTypeSelected">


                        <ImageView
                            android:layout_width="45sp"
                            android:layout_height="75sp"
                            app:srcCompat="@drawable/ic_gavel_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kill_name"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10sp"
                            android:text="@string/kill_short_desc"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:paddingBottom="10sp"
                            android:paddingHorizontal="5sp"/>

                    </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/games_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="20sp"
                    android:layout_marginHorizontal="30sp"
                    >

                    <TextView
                        android:id="@+id/chill_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chill_desc"
                        android:visibility="gone"
                        android:textColor="@android:color/white"/>
                    <TextView
                        android:id="@+id/thrill_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thrill_desc"
                        android:visibility="gone"
                        android:textColor="@android:color/white"/>
                    <TextView
                        android:id="@+id/kill_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kill_desc"
                        android:visibility="gone"
                        android:textColor="@android:color/white"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_gravity="bottom"
        android:paddingBottom="50dp">


        <Button
            android:id="@+id/create_game_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_session_button"
            android:background="@drawable/rounded_button"
            android:textColor="#fff"
            android:onClick="onClickCreate"
            />


    </FrameLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>